fix wrapping and message generation to not have mixed content

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -2,9 +2,20 @@
     font-weight: 700;
 }
 
+#main-content {
+    position: fixed;
+    bottom: 0px;
+    left: 5px;
+}
+
 .row .message {
     padding: 5px 20px 5px 0;
     line-height: 1.5em;
+}
+
+.inline-message {
+    display: inline !important;
+    padding: 0;
 }
 
 .chat-badge {
@@ -14,7 +25,7 @@
 
 .row span {
     width: fit-content;
-    padding: 0 5px 0 0;
+    padding: 0;
     margin: 0;
 }
 
